Modernize Java book for JDK 25